hphp/hack/test/typecheck/destructure/simple.bad.php.exp
ERROR: File "simple.bad.php", line 8, characters 9-13:
Only variables, wildcards, and nested shape/tuple patterns are allowed in destructuring patterns (Parsing[1002])
